# Django_Site

./: Dockerfile  pyproject.toml
mysite/mysite/: settings.py
mysite/shopapp/templates/shopapp/: base.html
