[tool.poetry]
name = "m-19-prod"
version = "0.1.0"
description = ""
authors = ["Krevetka101 <skorpion101196@list.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
asgiref = "^3.7.2"
django-debug-toolbar = "^4.1.0"
django-filter = "^23.2"
pillow = "^10.0.0"
pytz = "^2023.3"
sqlparse = "^0.4.4"
gunicorn = "^21.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
